Created Team Builder.  Have to finish manage team modal
